--- a/EventManagementSystemApp/EventManagementSystem/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,38 +12,38 @@
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="row">
-                <div class="col-5 form-floating mb-3 mx-auto">
-                    <input asp-for="Input.FirstName" class="fs-5 form-control rounded-3" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                    <label asp-for="Input.FirstName">First Name</label>
+                <div class="col-5 form-group my-2 mx-auto">
+                    <label asp-for="Input.FirstName" class="control-label"></label>
+                    <input asp-for="Input.FirstName" class="fs-5 form-control" autocomplete="FirstName" aria-required="true" placeholder="FirstName" />
                     <span asp-validation-for="Input.FirstName" class="text-danger"></span>
                 </div>
-                <div class="col-5 form-floating mb-3 mx-auto">
-                    <input asp-for="Input.LastName" class="fs-5 form-control rounded-3" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                    <label asp-for="Input.LastName">Last Name</label>
+                <div class="col-5 form-group my-2 mx-auto">
+                    <label asp-for="Input.LastName" class="control-label"></label>
+                    <input asp-for="Input.LastName" class="fs-5 form-control" autocomplete="LastName" aria-required="true" placeholder="LastName" />
                     <span asp-validation-for="Input.LastName" class="text-danger"></span>
                 </div>
             </div>
             <div class="row">
-                <div class="col-5 form-floating mb-3 mx-auto">
-                    <input asp-for="Input.Email" class="fs-5 form-control rounded-3" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                    <label asp-for="Input.Email">Email</label>
+                <div class="col-5 form-group my-2 mx-auto">
+                    <label asp-for="Input.Email" class="control-label"></label>
+                    <input asp-for="Input.Email" class="fs-5 form-control" autocomplete="usename@gmail.com" aria-required="true" placeholder="usename@gmail.com" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
-                <div class="col-5 form-floating mb-3 mx-auto">
-                    <input asp-for="Input.Address" class="fs-5 form-control rounded-3" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                    <label asp-for="Input.Address">Address</label>
+                <div class="col-5 form-group my-2 mx-auto">
+                    <label asp-for="Input.Address" class="control-label"></label>
+                    <input asp-for="Input.Address" class="fs-5 form-control" autocomplete="Address 1/2-3" aria-required="true" placeholder="Address 1/2-3" />
                     <span asp-validation-for="Input.Address" class="text-danger"></span>
                 </div>
             </div>
             <div class="row">
-                <div class="col-5 form-floating mb-3 mx-auto">
-                    <input asp-for="Input.Password" class="fs-5 form-control rounded-3" autocomplete="new-password" aria-required="true" placeholder="password" />
-                    <label asp-for="Input.Password">Password</label>
+                <div class="col-5 form-group my-2 mx-auto">
+                    <label asp-for="Input.Password" class="control-label"></label>
+                    <input asp-for="Input.Password" class="fs-5 form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
-                <div class="col-5 form-floating mb-3 mx-auto">
-                    <input asp-for="Input.ConfirmPassword" class="fs-5 form-control rounded-3" autocomplete="new-password" aria-required="true" placeholder="password" />
-                    <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                <div class="col-5 form-group my-2 mx-auto">
+                    <label asp-for="Input.ConfirmPassword" class="control-label"></label>
+                    <input asp-for="Input.ConfirmPassword" class="fs-5 form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                     <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
             </div>
@@ -52,37 +52,7 @@
             </div>
         </form>
     </div>
-@*     <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
- *@</div>
+</div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
