--- a/EventManagementSystemApp/EventManagementSystem/Views/Events/Create.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/Events/Create.cshtml
@@ -13,21 +13,24 @@
         <hr/>
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="EventName" class="fs-5 form-control rounded-3" />
-                <label asp-for="EventName" class="form-label">Event Name</label>
+            <div class="form-group my-2">
+                <label asp-for="EventName" class="control-label"></label>
+                <input asp-for="EventName" class="form-control" />
                 <span asp-validation-for="EventName" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="EventDescription" class="fs-5 form-control rounded-3" />
-                <label asp-for="EventDescription" class="form-label">Event Description</label>
+
+            <div class="form-group my-2">
+                <label asp-for="EventDescription" class="control-label"></label>
+                <input asp-for="EventDescription" class="form-control" />
                 <span asp-validation-for="EventDescription" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="EventImage" class="fs-5 form-control rounded-3" />
-                <label asp-for="EventImage" class="form-label">Event Image URL</label>
+
+            <div class="form-group my-2">
+                <label asp-for="EventImage" class="control-label"></label>
+                <input asp-for="EventImage" class="form-control" />
                 <span asp-validation-for="EventImage" class="text-danger"></span>
-            </div>       
+            </div>
+
             <div class="form-group d-flex justify-content-center">
                 <input type="submit" value="Create" class="fs-5 w-25 btn btn-primary" />
             </div>
