--- a/EventManagementSystemApp/EventManagementSystem/Views/Events/Index.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/Events/Index.cshtml
@@ -19,26 +19,26 @@
 
         if(i % 3 == 0)
         {
-           @: <div class="row mt-3" style="justify-content: start;">
+           @: <div class="row mt-3 d-flex justify-content-center">
         }
 
         <div class="col-md-3 m-3">
-           <div class="card" >
+           <div class="card">
               <img class="card-img-top" src="@item.EventImage" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">@item.EventName</h5>
                 <p class="card-text">@item.EventDescription</p>
               </div>
-              <div class="card-footer">
-                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">
-                    <i class="bi bi-pencil-square"></i> 
-                </a> 
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">
-                    <i class="bi bi-info-circle"></i> 
-                </a> 
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">
-                    <i class="bi bi-trash3"></i> 
-                </a>
+              <div class="card-footer text-center">
+                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning">
+                    <i class="bi bi-pencil-square"></i> Edit
+                 </a> 
+                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info">
+                     <i class="bi bi-info-circle"></i> Info
+                 </a> 
+                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">
+                     <i class="bi bi-trash3"></i> Delete
+                 </a>
               </div>
             </div>
         </div>
