--- a/EventManagementSystemApp/EventManagementSystem/Views/ScheduledEvents/Delete.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/ScheduledEvents/Delete.cshtml
@@ -4,42 +4,41 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ScheduledEvent</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ScheduledEventDateTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ScheduledEventDateTime)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ScheduledEventLocation)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ScheduledEventLocation)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ScheduledEventImage)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ScheduledEventImage)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Event.EventName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Event.Id)
-        </dd>
+<div class="container p-3">
+    <div class="w-75 m-auto rounded p-5 bg-white">
+        <h4 class="text-center text-secondary">Are you sure you want to delete this event?</h4>
+        <hr />
+        <dl class="row">
+            <div class="col-4">
+                <img src="@Model.ScheduledEventImage" width="100%" />
+            </div>
+            <div class="col-8 row">
+                <dt class = "col-sm-3">
+                    @Html.DisplayNameFor(model => model.ScheduledEventDateTime)
+                </dt>
+                <dd class = "col-sm-9">
+                    @Html.DisplayFor(model => model.ScheduledEventDateTime)
+                </dd>
+                <dt class = "col-sm-3">
+                    @Html.DisplayNameFor(model => model.ScheduledEventLocation)
+                </dt>
+                <dd class = "col-sm-9">
+                    @Html.DisplayFor(model => model.ScheduledEventLocation)
+                </dd>
+                <dt class = "col-sm-3">
+                    @Html.DisplayNameFor(model => model.Event.EventName)
+                </dt>
+                <dd class = "col-sm-9">
+                    @Html.DisplayFor(model => model.Event.EventName)
+                </dd>
+            </div>
     </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <a asp-action="Index" class="btn btn-outline-secondary">
+                <i class="bi bi-arrow-left"></i> Back
+            </a> |
+            <input type="submit" value="Delete" class="btn btn-danger" />
+        </form>
+    </div>
