--- a/EventManagementSystemApp/EventManagementSystem/Views/ScheduledEvents/Details.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/ScheduledEvents/Details.cshtml
@@ -4,80 +4,75 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="container p-3">
+    <div class="w-75 m-auto rounded p-5 bg-white">
+        <h4 class="text-center text-secondary">Scheduled Event Details</h4>
+        <hr />
+        <dl class="row">
+            <div class="col-4">
+                <img src="@Model.ScheduledEventImage" width="100%" />
+            </div>
+            <div class="col-8 row">
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.ScheduledEventDateTime)
+                </dt>
+                <dd class = "col-sm-9">
+                    @Html.DisplayFor(model => model.ScheduledEventDateTime)
+                </dd>
+                <dt class = "col-sm-3">
+                    @Html.DisplayNameFor(model => model.ScheduledEventLocation)
+                </dt>
+                <dd class = "col-sm-9">
+                    @Html.DisplayFor(model => model.ScheduledEventLocation)
+                </dd>
+                <dt class = "col-sm-3">
+                    @Html.DisplayNameFor(model => model.Event.EventName)
+                </dt>
+                <dd class = "col-sm-9">
+                    @Html.DisplayFor(model => model.Event.EventName)
+                </dd>
+            </div>
+        </dl>
 
-<div>
-    <h4>Scheduled Event</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ScheduledEventDateTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ScheduledEventDateTime)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ScheduledEventLocation)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ScheduledEventLocation)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ScheduledEventImage)
-        </dt>
-        <dd class="col-sm-10">
-            @if (!string.IsNullOrEmpty(Model.ScheduledEventImage))
+        <div class="ps-3">
+            <a asp-action="Index" class="btn btn-outline-secondary">
+                <i class="bi bi-arrow-left"></i> Back
+            </a> |
+            <a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model?.Id">Edit</a>
+        </div>
+        <hr />
+
+        <div class="container m-3">
+            @if (Model.Tickets?.Count > 0)
             {
-                <img src="@Model.ScheduledEventImage" alt="Event Image" class="img-fluid w-25" />
+                <h4>Tickets</h4>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Scheduled Event</th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @for (int i = 0; i < Model.Tickets.Count; i++)
+                        {
+                            var item = Model.Tickets.ElementAt(i);
+                            <tr>
+                                <th scope="row"><b>@(i + 1): </b></th>
+                                <td>@item.TicketPrice MKD</td>
+                                <td>@item.ScheduledEvent.EventNameDisplay</td>
+                                <td><a class="btn btn-success" asp-action="Details" asp-controller="Tickets" asp-route-id=@item.Id>Book your tickets</a></td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
             }
             else
             {
-                <p>No image available!</p>
+                <h4>No tickets for this scheduled event</h4>
             }
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Event.EventName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Event.EventName)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
-<hr/>
-
-<div class="container m-3">
-    @if (Model.Tickets?.Count > 0)
-    {
-        <h4>Tickets</h4>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Scheduled Event</th>
-                    <th scope="col"></th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (int i = 0; i < Model.Tickets.Count; i++)
-                {
-                    var item = Model.Tickets.ElementAt(i);
-                    <tr>
-                        <th scope="row"><b>@(i + 1): </b></th>
-                        <td>@item.TicketPrice MKD</td>
-                        <td>@item.ScheduledEvent.EventNameDisplay</td>
-                        <td><a class="btn btn-success" asp-action="Details" asp-controller="Tickets" asp-route-id=@item.Id>Book your tickets</a></td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    }
-    else
-    {
-        <h4>No tickets for this scheduled event</h4>
-    }
+        </div>
+    </div>
 </div>
