--- a/EventManagementSystemApp/EventManagementSystem/Views/ScheduledEvents/Edit.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/ScheduledEvents/Edit.cshtml
@@ -4,37 +4,38 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>ScheduledEvent</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container p-3">
+    <div class="bg-white w-50 p-5 m-auto rounded">
+        <button class="btn btn-outline-secondary" onclick="history.back()">
+            <i class="bi bi-arrow-left"></i> Back
+        </button>
+        <h2 class="text-center">Edit Event</h2>
+        <hr />
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="EventId" />
 
-            <div class="form-group">
+            <div class="form-group my-2">
                 <label asp-for="ScheduledEventDateTime" class="control-label"></label>
                 <input asp-for="ScheduledEventDateTime" class="form-control" />
                 <span asp-validation-for="ScheduledEventDateTime" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group my-2">
                 <label asp-for="ScheduledEventLocation" class="control-label"></label>
                 <input asp-for="ScheduledEventLocation" class="form-control" />
                 <span asp-validation-for="ScheduledEventLocation" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group my-2">
                 <label asp-for="ScheduledEventImage" class="control-label"></label>
                 <input asp-for="ScheduledEventImage" class="form-control" />
                 <span asp-validation-for="ScheduledEventImage" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group d-flex justify-content-center">
+                <input type="submit" value="Update" class="fs-5 w-25 btn btn-primary" />
             </div>
         </form>
     </div>
