--- a/EventManagementSystemApp/EventManagementSystem/Views/ScheduledEvents/Index.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/ScheduledEvents/Index.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="container">
-    <div class="d-flex justify-content-between">
-        <p class="fs-1">Scheduled events</p>
-        <div class="m-3">
-            <a class="btn btn-success" asp-controller="ScheduledEvents" asp-action="Create">Schedule new event</a>
+<div class="container py-2">
+    <div class="d-flex justify-content-between pt-2">
+        <p class="h1 text-white m-0 ps-4">All Scheduled Events</p>
+        <div class="pe-4 d-flex align-items-center">
+            <a class="btn btn-secondary" asp-controller="ScheduledEvents" asp-action="Create">Schedule New Event</a>
         </div>
     </div>
     <hr />
@@ -18,25 +18,27 @@
         var item = Model.ElementAt(i);
         if(i % 3 == 0)
         {
-            @:<div class="row d-flex justify-content-start">
+            @:<div class="row d-flex justify-content-center">
         }
         <div class="col-12 col-sm-6 col-md-4 col-lg-3 m-4">
-
             <div class="card" style="width: 18rem; height: 27rem">
                 <img style="max-height:12rem; object-fit:cover" class="card-img-top" src="@item.ScheduledEventImage" alt="Card image cap">
-               <div class="card-body">
+                <div class="card-body">
                     <h5 class="card-title">Event: @item.Event.EventName</h5><br />
                     <h6 class="card-title">Location: @item.ScheduledEventLocation</h6>
                     <h6 class="card-title">Date: @item.ScheduledEventDateTime.Value.ToString("MMMM dd, yyyy")</h6> <!-- Date formatted -->
-                </div>
-                <div class="card-footer">
-                    <div class="text-center">
-                        <a asp-controller="ScheduledEvents" asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Details</a>
-                        <a asp-controller="ScheduledEvents" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Edit</a>
-                        <a asp-controller="ScheduledEvents" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>            
-                    </div>
-                    
-                </div>
+                 </div>
+                 <div class="card-footer text-center">
+                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning">
+                        <i class="bi bi-pencil-square"></i> Edit
+                     </a> 
+                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info">
+                         <i class="bi bi-info-circle"></i> Info
+                     </a> 
+                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">
+                         <i class="bi bi-trash3"></i> Delete
+                     </a>
+                 </div>
             </div>
         </div>
 
