--- a/EventManagementSystemApp/EventManagementSystem/Views/Partner/Index.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/Partner/Index.cshtml
@@ -7,7 +7,7 @@
         @for (int i = 0; i < Model.Count(); i++)
         {
             var item = Model.ElementAt(i);
-            <div class="container row border py-3 mx-auto my-2 rounded-3">
+            <div class="container row border p-3 mx-auto mt-2 mb-4 rounded-3 shadow bg-body-tertiary">
                 <div class="col-4">
                     <img class="rounded-3" src="@item.image" width="80%" alt="@item.title" />
                 </div>
